fix portf layout from 2 columns to 3 columns on Firefox

--- a/app/scss/block/_portfolio.scss
+++ b/app/scss/block/_portfolio.scss
@@ -19,6 +19,7 @@
 	box-shadow: 2px 2px 4px rgba(black, 0.1);
 	margin: 40px auto 0;
 	padding: 10px;
+	max-width: 300px;
 	width: 100%;
 	flex-basis: 300px;
 	position: relative;
